--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+  	<img src="images/ring.svg" class="ringer">
+  </app-root>
 </body>
 </html>
